--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="Gdates">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +13,43 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-  <body ng-controller="MainContoller">
+<body ng-controller="MainContoller">
+    <div class="container-fluid">
+        <div class="row">
+            <nav id="poo" class="navbar navbar-default">
+                <div class="container-fluid">
+
+                    <div id="logo" class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"><span id="g">G</Span><span id="e">EEK DATES</span></a>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul id="options" class="nav navbar-nav navbar-right">
+                            <li><a href="#"><span class="options">Login</span></a></li>
+                            <li><a href="#"><span class="options">Register</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div id="welcomediv" class="col-md-12">
+            <div id="text">
+              <h1>Dating for You, Handsome.</h1>
+              <button id="welcome" type="button" class="btn btn-default">Get Started</button>
+            </div>
+          </div>
+        </div>
+        <div class="home-bottom">
+        </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -22,5 +59,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/controllers.js" type="text/javascript"></script>
-  </body>
+</body>
+
 </html>
