moved routes to their own file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Gdates">
+<html ng-app="gDates">
 
 <head>
     <meta charset="utf-8">
@@ -58,7 +58,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/controllers.js" type="text/javascript"></script>
+    <script src="js/controllers/main.js" type="text/javascript"></script>
+    <script src="js/controllers/login.js" type="text/javascript"></script>
+    <script src="js/controllers/register.js" type="text/javascript"></script>
 </body>
 
 </html>
