--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <script src="js/controllers/main.js" type="text/javascript"></script>
     <script src="js/controllers/login.js" type="text/javascript"></script>
     <script src="js/controllers/register.js" type="text/javascript"></script>
+    <script src="js/routes.js" type="text/javascript"></script>
+    <script src="js/services/members.js" type="text/javascript"></script>
 </body>
 
 </html>
