add register form

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul id="options" class="nav navbar-nav navbar-right">
-                            <li><a href="#"><span class="options">Login</span></a></li>
-                            <li><a href="#"><span class="options">Register</span></a></li>
+                            <li><a href="#/login"><span class="options">Login</span></a></li>
+                            <li><a href="#/register"><span class="options">Register</span></a></li>
                         </ul>
                     </div>
                 </div>
